[package]
name = "client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tokio-tungstenite = "0.19.0"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
# tokio = { version = "1.0.0", default-features = false, features = ["io-util", "rt", "macros"] }
tokio = { version = "1.0.0", default-features = false, features = ["full"] }
env_logger = "0.10.0"
url = "2.3.1"
anyhow = "1.0.71"

[dev-dependencies]
# futures-channel = "0.3.28"
# hyper = { version = "0.14.25", default-features = false, features = ["http1", "server", "tcp"] }
# tokio = { version = "1.27.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
# url = "2.3.1"
