[package]
name = "tokio-batch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3"
anyhow = "1.0.72"
futures-util = "0.3.30"
rand = "0.8.5"
