[package]
name = "simple-actors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
anyhow = "1.0.72"
futures = "0.3.29"
